--- a/src/styles/blocks/_container.scss
+++ b/src/styles/blocks/_container.scss
@@ -3,11 +3,11 @@
   margin: 0 auto;
   max-width: 1170px;
 
-  @include onTable {
+  @include on-table {
     padding: 39px 39px 0;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     padding: 39px 55px;
   }
 }
