--- a/src/styles/blocks/_current.scss
+++ b/src/styles/blocks/_current.scss
@@ -1,7 +1,7 @@
 .current {
   margin: 20px 0 0;
 
-  @include onTable {
+  @include on-table {
     margin: 44px 0 0;
   }
 
@@ -12,21 +12,21 @@
   }
 
   &__text {
-    @include ffPlexSans;
+    @include ff-plexsans;
 
     font-weight: 500;
     font-size: 16px;
     line-height: 16px;
     color: $c-main-text;
 
-    @include onTable {
+    @include on-table {
       font-size: 14px;
       line-height: 14px;
     }
   }
 
   &__date {
-    @include ffPlexSans;
+    @include ff-plexsans;
 
     font-weight: 700;
     font-size: 16px;
@@ -34,7 +34,7 @@
 
     color: $c-green;
 
-    @include onTable {
+    @include on-table {
       font-size: 14px;
       line-height: 21px;
     }
@@ -43,7 +43,8 @@
   &__title {
     position: relative;
 
-    @include ffMontserrat;
+    @include ff-montserrat;
+
     font-weight: 400;
     font-size: 28px;
     line-height: 28px;
@@ -65,13 +66,13 @@
 
       transform: translate(-50%, -50%);
 
-      @include onTable {
+      @include on-table {
         width: 15px;
         height: 15px;
       }
     }
 
-    @include onTable {
+    @include on-table {
       margin: 30px 0 0;
       font-size: 36px;
       line-height: 36px;
@@ -79,7 +80,7 @@
   }
 
   &__subtitle {
-    @include ffPlexSans;
+    @include ff-plexsans;
 
     font-size: 16px;
     line-height: 24px;
@@ -88,7 +89,7 @@
     width: 100%;
     margin: 10px 0 0;
 
-    @include onTable {
+    @include on-table {
       margin: 15px 0 0;
     }
   }
