--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -6,7 +6,7 @@
 
     padding: 50px 0 0;
 
-    @include onTable {
+    @include on-table {
       @include grid;
     }
   }
@@ -16,7 +16,7 @@
     justify-content: space-between;
     align-items: center;
 
-    @include onTable {
+    @include on-table {
       align-items: flex-start;
       justify-content: flex-start;
       flex-direction: column;
@@ -27,11 +27,11 @@
   }
 
   &__work {
-    @include onTable {
+    @include on-table {
       grid-column: 2 / 7;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       grid-column: 3 / 6;
     }
   }
@@ -40,7 +40,7 @@
     display: flex;
     gap: 20px;
 
-    @include onTable {
+    @include on-table {
       gap: 32px;
     }
   }
@@ -48,11 +48,11 @@
   &__menu {
     padding: 40px 0 80px;
 
-    @include onTable {
+    @include on-table {
       grid-column: 2 / 7;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       grid-column: 8 / 13;
       padding: 0;
     }
@@ -70,7 +70,8 @@
     flex-basis: calc(50% - 20px);
 
     &-link {
-      @include ffPlexSans;
+      @include ff-plexsans;
+
       line-height: 14px;
 
       text-decoration: none;
@@ -85,17 +86,18 @@
 
     padding: 0 0 60px;
 
-    @include onTable {
+    @include on-table {
       flex-direction: row;
       justify-content: space-between;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin: 86px 0 0;
     }
 
     &-title {
-      @include ffPlexSans;
+      @include ff-plexsans;
+
       font-weight: 300;
       line-height: 16px;
       text-align: center;
