--- a/src/styles/blocks/_lections.scss
+++ b/src/styles/blocks/_lections.scss
@@ -7,19 +7,19 @@
 
   margin: 60px 0 0;
 
-  background-image: url(/images/events/events__footer.png);
+  background-image: url(../images/events/events__footer.png);
   min-width: 320px;
   min-height: 210px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 
-  @include onTable {
+  @include on-table {
     margin: 112px 0 0;
     min-height: 390px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     margin: 104px 0 0;
     min-height: 550px;
   }
@@ -32,7 +32,7 @@
   &__wrapper {
     margin-bottom: -29%;
 
-    @include onTable {
+    @include on-table {
       margin-bottom: -24%;
     }
   }
@@ -44,7 +44,7 @@
 
     padding: 0 20px;
 
-    @include onTable {
+    @include on-table {
       padding: 0;
     }
   }
@@ -57,44 +57,44 @@
     background-color: $c-gray;
     box-shadow: 0 2px 0 0 #1a5a4c40;
 
-    @include onTable {
+    @include on-table {
       padding: 45px 55px 50px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       padding: 45px 100px 50px;
     }
   }
 
   &__lections {
-    @include ffPlexSans;
+    @include ff-plexsans;
 
     font-weight: 500;
     font-size: 16px;
     line-height: 16px;
 
-    @include onTable {
+    @include on-table {
       font-size: 14px;
       line-height: 14px;
     }
   }
 
   &__date {
-    @include ffPlexSans;
+    @include ff-plexsans;
 
     font-weight: 700;
     font-size: 16px;
     line-height: 24px;
     color: $c-green;
 
-    @include onTable {
+    @include on-table {
       font-size: 14px;
       line-height: 21px;
     }
   }
 
   &__title {
-    @include ffMontserrat;
+    @include ff-montserrat;
 
     text-align: center;
 
@@ -103,7 +103,7 @@
 
     margin: 20px 0 0;
 
-    @include onTable {
+    @include on-table {
       text-align: start;
 
       font-size: 36px;
@@ -112,7 +112,7 @@
       margin: 23px 0 0;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin: 16px 0 0;
     }
   }
