--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -30,11 +30,11 @@
     z-index: 100;
     width: 100%;
 
-    @include onTable {
+    @include on-table {
       padding: 40px 39px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       padding: 40px 56px 48px;
     }
   }
@@ -70,13 +70,13 @@
 
     margin-left: 52px;
 
-    @include onTable {
+    @include on-table {
       grid-column: 1 / 4;
       margin-left: 62px;
       gap: 24px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       grid-column: 1 / 6;
       gap: 0;
 
@@ -88,7 +88,7 @@
     flex-basis: calc(50% - 20px);
 
     &-link {
-      @include ffPlexSans;
+      @include ff-plexsans;
 
       font-weight: 500;
       font-size: 16px;
@@ -100,12 +100,13 @@
   }
 
   &__work {
-    @include ffPlexSans;
+    @include ff-plexsans;
+
     font-size: 14px;
     line-height: 21px;
     color: $c-gray;
 
-    @include onTable {
+    @include on-table {
       min-width: 170px;
     }
 
@@ -127,7 +128,7 @@
 
     grid-column: 1 / 3;
 
-    @include onTable {
+    @include on-table {
       align-items: flex-start;
       grid-column: 4 / 7;
       flex-direction: row;
@@ -135,7 +136,7 @@
       gap: 26px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       grid-column: 8 / 13;
     }
   }
@@ -149,7 +150,7 @@
 
     margin: 24px 0;
 
-    @include onTable {
+    @include on-table {
       height: 100%;
       width: 1px;
       grid-column: 3;
@@ -160,20 +161,21 @@
       margin: 0;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       grid-column: 7;
       transform: translateX(0);
     }
   }
 
   &__subtitle {
-    @include ffPlexSans;
+    @include ff-plexsans;
+
     font-size: 14px;
     line-height: 21px;
 
     color: $c-gray;
 
-    @include onTable {
+    @include on-table {
       margin: 37px 0 0;
     }
 
