--- a/src/styles/blocks/_subscribe.scss
+++ b/src/styles/blocks/_subscribe.scss
@@ -9,17 +9,17 @@
 
     padding: 88px 0;
 
-    @include onTable {
+    @include on-table {
       padding: 82px 0;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       padding: 163px 0;
     }
   }
 
   &__wrapper {
-    background-image: url(/images/subscribe/subscribe.jpg);
+    background-image: url(../images/subscribe/subscribe.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -29,21 +29,23 @@
   }
 
   &__title {
-    @include ffMontserrat;
+    @include ff-montserrat;
+
     font-weight: 700;
 
     text-align: center;
 
     color: $c-gray;
 
-    @include onTable {
+    @include on-table {
       font-size: 48px;
       line-height: 48px;
     }
   }
 
   &__subtitle {
-    @include ffPlexSans;
+    @include ff-plexsans;
+
     font-weight: 400;
     font-size: 16px;
     line-height: 27px;
@@ -53,7 +55,7 @@
 
     margin: 20px 0 0;
 
-    @include onTable {
+    @include on-table {
       font-size: 18px;
       line-height: 18px;
 
@@ -70,7 +72,8 @@
     padding: 0 0 0 24px;
 
     &::placeholder {
-      @include ffMontserrat;
+      @include ff-montserrat;
+
       font-size: 14px;
       line-height: 14px;
       color: $c-main-text;
@@ -88,7 +91,7 @@
 
     margin: 50px 0 0;
 
-    @include onTable {
+    @include on-table {
       gap: 16px;
       height: 70px;
 
@@ -96,7 +99,7 @@
       margin: 64px 0 0;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin: 72px 0 0;
     }
   }
@@ -112,12 +115,12 @@
     background-color: $c-main-red;
     border: none;
 
-    @include onTable {
+    @include on-table {
       width: 70px;
       height: 67.9px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       height: 69.5px;
     }
   }
