--- a/src/styles/blocks/_tickets.scss
+++ b/src/styles/blocks/_tickets.scss
@@ -9,7 +9,7 @@
   border: 1px solid $c-green;
   transition: 0.3s all linear;
 
-  @include onTable {
+  @include on-table {
     height: 70px;
   }
 
@@ -18,7 +18,8 @@
   }
 
   &__title {
-    @include ffPlexSans;
+    @include ff-plexsans;
+
     font-weight: 500;
     line-height: 16px;
     text-transform: uppercase;
@@ -37,7 +38,7 @@
     height: 50px;
     background-color: $c-green;
 
-    @include onTable {
+    @include on-table {
       width: 70px;
       height: 70px;
     }
