--- a/src/styles/blocks/_work.scss
+++ b/src/styles/blocks/_work.scss
@@ -6,11 +6,11 @@
 
   padding: 40px 0 70px;
 
-  @include onTable {
+  @include on-table {
     padding: 0 0 62px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     padding: 0;
   }
 
@@ -19,11 +19,11 @@
     height: 1px;
     background-color: $c-green;
 
-    @include onTable {
+    @include on-table {
       grid-column: 2 / 7;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       height: 100%;
       width: 1px;
       grid-column: 7;
@@ -35,7 +35,7 @@
   &__block {
     max-width: 220px;
 
-    @include onDesktop {
+    @include on-desktop {
       min-width: 169px;
     }
   }
@@ -43,13 +43,14 @@
   &__contact {
     max-width: 220px;
 
-    @include onDesktop {
+    @include on-desktop {
       min-width: 169px;
     }
   }
 
   &__title {
-    @include ffPlexSans;
+    @include ff-plexsans;
+
     font-size: 14px;
     line-height: 21px;
   }
@@ -65,7 +66,8 @@
   }
 
   &__item {
-    @include ffPlexSans;
+    @include ff-plexsans;
+
     font-size: 14px;
     line-height: 21px;
 
@@ -88,7 +90,7 @@
     width: 50px;
     height: 50px;
 
-    @include onTable {
+    @include on-table {
       display: none;
     }
   }
