--- a/src/styles/blocks/_events.scss
+++ b/src/styles/blocks/_events.scss
@@ -1,16 +1,16 @@
 .events {
   margin: 70px 0 0;
 
-  @include onTable {
+  @include on-table {
     margin: 88px 0 0;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     margin: 200px 0 0;
   }
 
   &__title {
-    @include ffMontserrat;
+    @include ff-montserrat;
 
     font-weight: 700;
     font-size: 36px;
@@ -29,7 +29,7 @@
       margin: 60px 0 0;
     }
 
-    @include onTable {
+    @include on-table {
       margin: 48px 0 0;
 
       &:last-child {
@@ -37,7 +37,7 @@
       }
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin: 56px 0 0;
     }
   }
