--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -1,16 +1,16 @@
 .gallery {
   margin: 183px 0 0;
 
-  @include onTable {
+  @include on-table {
     margin: 208px 0 0;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     margin: 308px 0 0;
   }
 
   &__title {
-    @include ffMontserrat;
+    @include ff-montserrat;
 
     text-align: center;
 
@@ -30,12 +30,12 @@
 
     margin: 40px 0 0;
 
-    @include onTable {
+    @include on-table {
       height: 543px;
       row-gap: 20px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       @include grid;
 
       height: max-content;
@@ -46,7 +46,9 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    transition:
+      transform 0.3s ease-in-out,
+      box-shadow 0.3s ease-in-out;
 
     &--1 {
       grid-column: 1 / 5;
@@ -72,12 +74,12 @@
 
   &__wrapper {
     margin: 22px 0 0;
-  
-    @include onTable {
+
+    @include on-table {
       margin: 32px 0 0;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       display: none;
     }
   }
