--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -4,13 +4,14 @@
 
   &__content {
     position: relative;
+
     @include grid;
 
     align-items: flex-start;
   }
 
   &__background {
-    background-image: url(/images/header/header.jpg);
+    background-image: url(../images/header/header.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -23,7 +24,7 @@
 
     grid-column: 1 / 3;
 
-    @include onTable {
+    @include on-table {
       grid-column: 4 / 7;
 
       min-height: 384px;
@@ -31,7 +32,7 @@
       margin: -107px -39px 0 0;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       grid-column: 6 / 13;
       min-height: 655px;
     }
@@ -54,13 +55,13 @@
 
     transform: translate(-70%, -20%);
 
-    @include onTable {
+    @include on-table {
       grid-column: 5 / 6;
 
       transform: translate(-75%, -25%);
     }
 
-    @include onDesktop {
+    @include on-desktop {
       grid-column: 7;
 
       transform: translate(-80%);
@@ -68,7 +69,8 @@
   }
 
   &__title {
-    @include ffMontserrat;
+    @include ff-montserrat;
+
     font-weight: 700;
     font-size: 45px;
     line-height: 45px;
@@ -83,7 +85,7 @@
 
     margin: 20px 0 0;
 
-    @include onTable {
+    @include on-table {
       grid-column: 1 / 4;
       grid-row-start: 2;
       align-self: flex-start;
@@ -95,7 +97,7 @@
       margin: 64px 0 0;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       grid-column: 1 / 5;
       font-size: 70px;
       line-height: 86px;
@@ -109,7 +111,7 @@
 
     grid-column: 1 / 3;
 
-    @include onTable {
+    @include on-table {
       margin: 0;
 
       grid-column: 1 / 4;
@@ -119,7 +121,7 @@
       max-width: 270px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       grid-column: 3 / 6;
 
       margin: 0 0 118px;
@@ -132,7 +134,8 @@
     left: -40px;
     bottom: 75px;
 
-    @include ffPlexSans;
+    @include ff-plexsans;
+
     font-weight: 700;
     color: $c-main-text;
     text-transform: uppercase;
@@ -148,7 +151,7 @@
       transform: rotate(90deg) translate(30px, 55px);
     }
 
-    @include onDesktop {
+    @include on-desktop {
       display: block;
     }
   }
