--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,6 @@
 @import "utils/mixins";
 @import "utils/vars";
 @import "utils/reset";
-
 @import "blocks/container";
 @import "blocks/header";
 @import "blocks/tickets";
@@ -19,5 +18,5 @@ html {
 }
 
 body {
-  font-family: "IBM Plex Sans", "Montserrat", sans-serif;
+  font-family: "Gill Sans", Montserrat, sans-serif;
 }
