--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,24 +1,24 @@
-@mixin onTable {
+@mixin on-table {
   @media (min-width: 690px) {
     @content;
   }
 }
 
-@mixin onDesktop {
+@mixin on-desktop {
   @media (min-width: 1170px) {
     @content;
   }
 }
 
-@mixin ffPlexSans {
+@mixin ff-plexsans {
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
 }
 
-@mixin ffMontserrat {
-  font-family: "Montserrat", sans-serif;
+@mixin ff-montserrat {
+  font-family: "Gill Sans", Montserrat, sans-serif;
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
@@ -29,12 +29,12 @@
   grid-template-columns: repeat(2, 1fr);
   column-gap: 20px;
 
-  @include onTable {
+  @include on-table {
     grid-template-columns: repeat(6, 1fr);
     column-gap: 30px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     grid-template-columns: repeat(12, 1fr);
   }
 }
