--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -68,6 +68,11 @@
 
   &__item {
     flex-basis: calc(50% - 20px);
+    transition: 0.3s all linear;
+
+    &:hover {
+      transform: scale(1.03);
+    }
 
     &-link {
       @include ff-plexsans;
@@ -103,4 +108,9 @@
       text-align: center;
     }
   }
-}
+
+  &__link:hover .footer__logo-icon path {
+    transition: 0.3s all linear;
+    fill: $c-green;
+  }
+} 
