--- a/src/styles/blocks/_work.scss
+++ b/src/styles/blocks/_work.scss
@@ -79,6 +79,12 @@
   &__link {
     text-decoration: none;
     color: inherit;
+    transition: 0.3s;
+
+    &:hover {
+      color: #037059;
+      transform: scale(1.03);
+    }
   }
 
   &__btn {
