--- a/src/styles/blocks/_tickets.scss
+++ b/src/styles/blocks/_tickets.scss
@@ -2,9 +2,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
   width: 100%;
   height: 50px;
+  cursor: pointer;
 
   border: 1px solid $c-green;
   transition: 0.3s all linear;
