add to hover nav

--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -17,6 +17,7 @@
     background-color: $c-main-text;
     height: 100vh;
     opacity: 0.4;
+    transition: 0.3s all linear;
   }
 
   &__content {
@@ -93,9 +94,14 @@
       font-weight: 500;
       font-size: 16px;
       line-height: 16px;
+      transition: 1s;
 
       text-decoration: none;
       color: $c-gray;
+
+      &:hover {
+        letter-spacing: 0.1rem;
+      }
     }
   }
 
