add to fill in carousel cicle

--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -94,6 +94,10 @@
   &__circle {
     transition: all 0.3s linear;
 
+    &:active {
+      fill: $c-green;
+    }
+
     &:hover {
       fill: $c-green;
     }
