--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -22,9 +22,8 @@
   &__gallery {
     display: flex;
     gap: 16px;
-    overflow: hidden;
-    -webkit-overflow-scrolling: touch;
-    scroll-behavior: smooth;
+    overflow-x: scroll;
+    width: 100%;
 
     height: 410px;
 
@@ -44,11 +43,13 @@
 
   &__img {
     width: 100%;
-    height: 100%;
     object-fit: cover;
     transition:
       transform 0.3s ease-in-out,
       box-shadow 0.3s ease-in-out;
+    flex: 0 0 auto;
+    height: auto;
+    scroll-snap-align: start;
 
     &--1 {
       grid-column: 1 / 5;
