--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -17,4 +17,25 @@
   &__close {
     background-image: url(../images/icons/close-icon.svg);
   }
+
+  &__button {
+    background-image: url(../images/icons/button-arrow.svg);
+    border: 0;
+    background-color: $c-coral;
+    outline: none;
+  }
+
+  &__fb {
+    background-image: url(../images/icons/fb-logo.svg);
+  }
+
+  &__insta {
+    background-image: url(../images/icons/insta-logo.svg);
+  }
+
+  &__up {
+    background-image: url(../images/icons/arrow-up.svg);
+    height: 16px;
+    width: 16px;
+  }
 }
