--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -5,6 +5,7 @@
   &__text {
     line-height: 20px;
     margin: 0;
+    font-weight: 300;
   }
 
   &__span {
@@ -18,5 +19,16 @@
 
   &__info {
     margin-bottom: 16px;
+
+    @include on-tablet {
+      margin: 0;
+      width: 158px;
+    }
+  }
+
+  &__break {
+    @include on-tablet {
+      padding-top: 40px;
+    }
   }
 }
