--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
+  transition: #{$_property} $animation-speed;
   &:hover {
     #{$_property}: $_toValue;
   }
@@ -21,11 +21,10 @@
   padding-inline: 20px;
 
   @include on-tablet {
-    padding-inline: 39px;
+    padding-inline: 34px;
   }
 
   @include on-desktop {
-    max-width: 1170px;
     margin-inline: auto;
     padding-inline: 55px;
   }
