--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -4,21 +4,38 @@
   &__content {
     display: flex;
     flex-direction: column;
-  }
-
-  &__content-photo {
-    background-image: url(../images/header/header-mb.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 300px;
 
     @include on-tablet {
-      background-image: url(../images/header/header-tb.png);
+      flex-direction: row-reverse;
     }
 
-    @include on-desktop {
-      background-image: url(../images/header/header-ds.png);
+    &-photo {
+      background-image: url(../images/header/header-mb.png);
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      height: 300px;
+
+      @include on-tablet {
+        background-image: url(../images/header/header-tb.png);
+        height: 384px;
+        width: 100%;
+      }
+
+      @include on-desktop {
+        background-image: url(../images/header/header-ds.png);
+        height: 655px;
+      }
+    }
+
+    &-info {
+      @include on-tablet {
+        padding-top: 127px;
+      }
+
+      @include on-desktop {
+        padding-top: 206px;
+      }
     }
   }
 
@@ -29,27 +46,78 @@
     line-height: 45px;
     text-align: center;
     margin: 20px 0;
+
+    @include on-tablet {
+      font-size: 54px;
+      line-height: 65px;
+      text-align: left;
+      margin: 0 0 38px;
+    }
+
+    @include on-desktop {
+      font-size: 72px;
+      line-height: 87px;
+      margin-bottom: 89px;
+    }
   }
 
   &__tickets {
+    box-sizing: border-box;
     width: 100%;
-    border: 1px solid #1A5A4C;
+    border: 1px solid #1a5a4c;
 
     display: flex;
 
-    &-arrow {
-      background-color: #1A5A4C;
-      flex-grow: 1;
+    @include hover(transform, scale(1.1));
 
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    @include on-tablet {
+      width: 270px;
+    }
+
+    @include on-desktop {
+      width: 269px;
+      margin-left: 190px;
+    }
+
+    &-arrow {
+      background-color: #1a5a4c;
     }
 
     &-subtitle {
-      padding: 18px 80px;
-      font-weight: 500;
       margin: 0;
+      line-height: 16px;
+      font-weight: 500;
+      padding: 18px 80px;
+
+      @include on-tablet {
+        padding: 27px 68px;
+      }
+    }
+  }
+
+  &__decor {
+    display: none;
+
+    @include on-desktop {
+      position: absolute;
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      transform: rotate(-90deg);
+      bottom: 65px;
+      left: 0;
+    }
+
+    &-rectangle {
+      height: 1px;
+      width: 70px;
+      background-color: $c-darkgreen;
+    }
+
+    &-text {
+      text-decoration: none;
+
+      @include hover(transform, translate(10px));
     }
   }
 }
