--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,16 +1,7 @@
 .menu {
   box-sizing: border-box;
-  background-color: $menu-bgc;
 
   overflow: auto; /* to scroll the menu if needed */
-
-  @include on-tablet {
-    height: 225px;
-  }
-
-  @include on-desktop {
-    height: 233px;
-  }
 
   &__nav {
     box-sizing: border-box;
@@ -19,25 +10,52 @@
     display: flex;
     gap: 28px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+
+    @include on-tablet {
+      gap: 35px;
+      padding: 0;
+      margin: 0;
+      border-bottom: unset;
+      width: 282px;
+    }
   }
 
   &__schedule {
     padding-bottom: 27px;
+
+    @include on-tablet {
+      padding: 0 0 0 38px;
+      border-left: 1px solid rgba(255, 255, 255, 0.5);
+      display: flex;
+      gap: 29px;
+    }
   }
-}
 
-.semitransparency {
-  content: '';
-  position: fixed;
-  bottom: 0;
-  opacity: 0;
-  object-fit: fill;
-  height: 100vh;
-  width: 100vh;
-  pointer-events: none;
+  &__bgc {
+    background-color: $c-darkgreen;
+    padding: 27px 20px;
 
-  &:target {
+    @include on-tablet {
+      padding: 40px 34px;
+    }
+
+    @include on-desktop {
+      padding-inline: 56px;
+    }
+  }
+
+  &__semitransparency {
+    height: 100vh;
+    max-width: 100vw;
+    opacity: 1;
+    pointer-events: none;
     background: rgba(0, 0, 0, 0.5);
-    z-index: 2;
+  }
+
+  &__wrapper {
+    @include on-tablet {
+      display: flex;
+      gap: 30px;
+    }
   }
 }
