--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,14 +1,19 @@
 .nav {
   &__list {
     list-style-type: none;
-    margin: 0;
+    margin: 0 0 24px;
     padding: 0;
     display: flex;
     gap: 28px;
 
+    @include on-tablet {
+      gap: 20px;
+    }
+
     &-flex {
       display: flex;
       flex-direction: column;
+      gap: 24px;
       width: 100px;
     }
   }
@@ -18,9 +23,7 @@
     font-weight: 500;
     line-height: 16px;
     text-decoration: none;
-  }
 
-  &__item {
-    margin-bottom: 24px;
+    @include hover(color, $subtitle-color);
   }
 }
