--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -21,8 +21,9 @@
     top: 0;
     left: 0;
     right: 0;
+    max-width: 100vw;
 
-    transition: all 0.3s;
+    transition: all 0.3s ease-in;
     opacity: 0;
     transform: translateY(-100%);
     pointer-events: none;
