--- a/src/styles/blocks/section-title.scss
+++ b/src/styles/blocks/section-title.scss
@@ -5,4 +5,15 @@
   line-height: 36px;
   text-align: center;
   margin: 70px 0 40px;
+
+  @include on-tablet {
+    text-align: left;
+    font-size: 48px;
+    line-height: 48px;
+    margin: 88px 0 48px;
+  }
+
+  @include on-desktop {
+    margin: 200px 0 56px;
+  }
 }
