--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -6,11 +6,11 @@
   z-index: 2;
 
   @include on-tablet {
-    gap: 350px;
+    gap: 415px;
   }
 
   @include on-desktop {
-    gap: 500px;
+    gap: 550px;
   }
 
   &__logo {
@@ -18,9 +18,12 @@
     height: 61px;
     margin-top: 9px;
 
+    @include hover(transform, scale(1.1));
+
     @include on-tablet {
       height: 72px;
       width: 66px;
+      margin-top: 15px;
     }
   }
 }
