--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,11 +3,19 @@
 @import 'typography';
 @import './blocks/page';
 @import './blocks/icon';
+@import './blocks/arrow-button';
 @import './blocks/header';
 @import './blocks/top-bar';
 @import './blocks/nav';
 @import './blocks/schedule';
 @import './blocks/menu';
 @import './blocks/section-title';
+@import './blocks/subtitle';
+@import './blocks/date';
 @import './blocks/events';
-
+@import './blocks/slider';
+@import './blocks/lecture';
+@import './blocks/gallery';
+@import './blocks/subscription';
+@import './blocks/footer';
+@import './blocks/credits';
