--- a/src/styles/blocks/_container.scss
+++ b/src/styles/blocks/_container.scss
@@ -9,5 +9,14 @@
 
   @include on-desktop {
     padding: 39px 55px;
+    width: auto;
   }
+
+  @include on-design {
+    max-width: 2450px;
+  }
+}
+
+.no-scroll {
+  overflow: hidden;
 }
