--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -10,6 +10,12 @@
   }
 }
 
+@mixin on-design {
+  @media (min-width: 1440px) {
+    @content;
+  }
+}
+
 @mixin ff-plexsans {
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 400;
