--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -36,6 +36,12 @@
     }
   }
 
+  &__image {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+
   @include on-tablet {
     margin-bottom: 92px;
   }
