--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -18,6 +18,11 @@
       border-bottom: unset;
       width: 282px;
     }
+
+    @include on-desktop {
+      gap: 102px;
+      width: 494px;
+    }
   }
 
   &__schedule {
@@ -28,6 +33,11 @@
       border-left: 1px solid rgba(255, 255, 255, 0.5);
       display: flex;
       gap: 29px;
+    }
+
+    @include on-desktop {
+      padding-left: 102px;
+      gap: 31px;
     }
   }
 
@@ -56,6 +66,10 @@
     @include on-tablet {
       display: flex;
       gap: 30px;
+    }
+
+    @include on-desktop {
+      gap: 102px;
     }
   }
 }
