--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -10,11 +10,20 @@
       gap: 20px;
     }
 
+    @include on-desktop {
+      gap: 31px;
+    }
+
     &-flex {
       display: flex;
       flex-direction: column;
       gap: 24px;
       width: 100px;
+
+      @include on-desktop {
+        gap: 30px;
+        width: 168px;
+      }
     }
   }
 
@@ -25,5 +34,10 @@
     text-decoration: none;
 
     @include hover(color, $subtitle-color);
+
+    @include on-desktop {
+      font-size: 22px;
+      line-height: 22px;
+    }
   }
 }
