--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -19,15 +19,15 @@
 
     @include on-desktop {
       &-1 {
-        grid-area: 1 / 1 / 2 / 4;
+        grid-column: 1 / 5;
       }
 
       &-2 {
-        grid-area: 1 / 5 / 2 / -1;
+        grid-column: 5 / -1;
       }
 
       &-3 {
-        grid-area: 2 / 1 / 3 / 8;
+        grid-area: 2 / 1 / 3 / 9;
       }
 
       &-4 {
