--- a/css/main.css
+++ b/css/main.css
@@ -241,78 +241,12 @@ h3::after {
   background-color: #FFF;
   z-index: 5;
 }
-.btn-scroll-top:active {
-  animation: explode 0.2s ease forwards;
-}
-.btn-scroll-top:hover {
-  animation: pulse 1s linear infinite;
-}
-.btn-scroll-top:hover::before {
-  animation: spin-1 1s linear infinite;
-}
-.btn-scroll-top:hover::after {
-  animation: spin-2 1s linear infinite;
+@media (min-width: 640px) {
+  .btn-scroll-top {
+    display: none;
+  }
 }
 
-.btn-scroll-top::before,
-.btn-scroll-top::after {
-  content: "";
-  position: absolute;
-  top: -7px;
-  left: -7px;
-  width: 120%;
-  height: 120%;
-  border-radius: 50%;
-  transform-origin: center;
-}
-
-.btn-scroll-top::before {
-  animation: spin-1 2s linear infinite;
-  border: 2px solid yellowgreen;
-}
-
-.btn-scroll-top::after {
-  animation: spin-2 2s linear infinite;
-  border: 2px solid peru;
-}
-
-@keyframes spin-1 {
-  0% {
-    transform: rotateY(0deg);
-  }
-  100% {
-    transform: rotateY(360deg);
-  }
-}
-@keyframes spin-2 {
-  0% {
-    transform: rotateX(360deg);
-  }
-  100% {
-    transform: rotateX(0deg);
-  }
-}
-@keyframes pulse {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.1);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-@keyframes explode {
-  0% {
-    transform: scale(1);
-    opacity: 1;
-  }
-  100% {
-    transform: scale(4);
-    opacity: 0;
-  }
-}
 .burger {
   height: 24px;
   width: 24px;
@@ -733,9 +667,19 @@ h3::after {
 }
 @media (min-width: 1280px) {
   .first {
-    display: flex;
-    flex-direction: row-reverse;
-    gap: 5px;
+    padding-inline: 20px;
+    max-width: 1280px;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 1280px) and (min-width: 640px) {
+  .first {
+    padding-inline: 39px;
+  }
+}
+@media (min-width: 1280px) and (min-width: 1280px) {
+  .first {
+    padding-inline: 55px;
   }
 }
 @media (min-width: 640px) {
@@ -746,14 +690,9 @@ h3::after {
 }
 @media (min-width: 1280px) {
   .first__img {
-    position: absolute;
-    right: 0;
-    width: 56.6%;
-    max-height: 655px;
+    grid-column: 6/13;
     -o-object-fit: cover;
        object-fit: cover;
-    -o-object-position: bottom;
-       object-position: bottom;
   }
 }
 @media (min-width: 640px) {
@@ -764,9 +703,11 @@ h3::after {
 }
 @media (min-width: 1280px) {
   .first .container {
+    grid-column: 1/6;
     max-width: 1280px;
     width: 100%;
     margin: 0 auto;
+    padding-right: 0;
   }
 }
 .first__content {
@@ -800,6 +741,14 @@ h3::after {
 @media (min-width: 1280px) {
   .first__title {
     margin-bottom: 90px;
+  }
+}
+.first__link-ticket {
+  display: block;
+}
+@media (min-width: 1280px) {
+  .first__link-ticket {
+    margin-left: auto;
   }
 }
 @media (min-width: 640px) {
@@ -1300,45 +1249,11 @@ h3::after {
     right: -300%;
   }
 }
-.footer__line {
-  width: 100%;
-  height: 2px;
-  background-image: linear-gradient(90deg, rgb(238, 216, 20), rgb(49, 154, 240), rgb(32, 124, 9), rgb(238, 216, 20));
-  background-size: 200% 100%;
-  animation: moveGradient 4s linear infinite;
-  grid-column: 1/-1;
-}
-@media (min-width: 1280px) {
-  .footer__line {
-    grid-column: 7/8;
-    justify-self: center;
-    width: 2px;
-    height: 260px;
-    background-size: 100% 200%;
-    animation: moveGradientDesktop 4s linear infinite;
-    background-image: linear-gradient(180deg, rgb(238, 216, 20), rgb(49, 154, 240), rgb(32, 124, 9), rgb(238, 216, 20));
-  }
-}
-@keyframes moveGradient {
-  0% {
-    background-position: 200% 0;
-  }
-  100% {
-    background-position: -200% 0;
-  }
-}
-@keyframes moveGradientDesktop {
-  0% {
-    background-position: 0 200%;
-  }
-  100% {
-    background-position: 0 -200%;
-  }
-}
 .footer__nav {
   padding-top: 40px;
   color: #0F0E08;
   grid-column: 1/-1;
+  box-shadow: 0px -2px 0 rgba(26, 90, 76, 0.5);
 }
 @media (min-width: 640px) {
   .footer__nav {
@@ -1347,9 +1262,13 @@ h3::after {
 }
 @media (min-width: 1280px) {
   .footer__nav {
+    box-shadow: -2px 0px 0 rgba(26, 90, 76, 0.5);
     padding-top: 0px;
-    grid-column: 8/11;
+    grid-column: 7/11;
     justify-self: stretch;
+    height: 260px;
+    padding-left: 65px;
+    margin-left: 35px;
   }
 }
 .footer__nav ul {
