--- a/src/styles/elements/_buttons.scss
+++ b/src/styles/elements/_buttons.scss
@@ -125,89 +125,93 @@
   background-color: $white;
   z-index: 5;
 
-  &:active {
-    animation: explode 0.2s ease forwards;
+  @include onTable {
+    display: none;
   }
 
-  &:hover {
-    animation: pulse 1s linear infinite;
+  // &:active {
+  //   animation: explode 0.2s ease forwards;
+  // }
 
-    &::before {
-      animation: spin-1 1s linear infinite;
-    }
+  // &:hover {
+  //   animation: pulse 1s linear infinite;
 
-    &::after {
-      animation: spin-2 1s linear infinite;
-    }
-  }
+  //   &::before {
+  //     animation: spin-1 1s linear infinite;
+  //   }
+
+  //   &::after {
+  //     animation: spin-2 1s linear infinite;
+  //   }
+  // }
 }
 
-.btn-scroll-top::before,
-.btn-scroll-top::after {
-  content: "";
-  position: absolute;
-  top: -7px;
-  left: -7px;
-  width: 120%;
-  height: 120%;
-  border-radius: 50%;
-  transform-origin: center;
-}
+// .btn-scroll-top::before,
+// .btn-scroll-top::after {
+//   content: "";
+//   position: absolute;
+//   top: -7px;
+//   left: -7px;
+//   width: 120%;
+//   height: 120%;
+//   border-radius: 50%;
+//   transform-origin: center;
+// }
 
 
-.btn-scroll-top::before {
-  animation: spin-1 2s linear infinite;
-  // border-top-color: yellowgreen;
-  border: 2px solid yellowgreen;
-}
+// .btn-scroll-top::before {
+//   animation: spin-1 2s linear infinite;
+//   // border-top-color: yellowgreen;
+//   border: 2px solid yellowgreen;
+// }
 
-.btn-scroll-top::after {
-  animation: spin-2 2s linear infinite;
-  // border-top-color: peru;
-  border: 2px solid peru;
-}
+// .btn-scroll-top::after {
+//   animation: spin-2 2s linear infinite;
+//   // border-top-color: peru;
+//   border: 2px solid peru;
+// }
 
 
 
-@keyframes spin-1 {
-  0% {
-    transform: rotateY( 0deg);
-  }
-  100% {
-    transform: rotateY(360deg);
-  }
-}
+// @keyframes spin-1 {
+//   0% {
+//     transform: rotateY( 0deg);
+//   }
+//   100% {
+//     transform: rotateY(360deg);
+//   }
+// }
 
-@keyframes spin-2 {
-  0% {
-    transform: rotateX(360deg);
-  }
-  100% {
-    transform: rotateX(0deg);
-  }
-}
+// @keyframes spin-2 {
+//   0% {
+//     transform: rotateX(360deg);
+//   }
+//   100% {
+//     transform: rotateX(0deg);
+//   }
+// }
 
-@keyframes pulse {
-  0% {
-    transform: scale(1);
-  }
+// @keyframes pulse {
+//   0% {
+//     transform: scale(1);
+//   }
 
-  50% {
-    transform: scale(1.1);
-  }
+//   50% {
+//     transform: scale(1.1);
+//   }
 
-  100% {
-    transform: scale(1);
-  }
-}
+//   100% {
+//     transform: scale(1);
+//   }
+// }
 
-@keyframes explode {
-  0% {
-    transform: scale(1);
-    opacity: 1;
-  }
-  100% {
-    transform: scale(4);
-    opacity: 0;
-  }
-}
+// @keyframes explode {
+//   0% {
+//     transform: scale(1);
+//     opacity: 1;
+//   }
+//   100% {
+//     transform: scale(4);
+//     opacity: 0;
+//   }
+// }
