--- a/src/styles/sectoins/_footer.scss
+++ b/src/styles/sectoins/_footer.scss
@@ -118,60 +118,64 @@
     }
   }
 
-  &__line {
-    width: 100%;
-    height: 2px;
-    background-image: linear-gradient(90deg, rgb(238, 216, 20), rgb(49, 154, 240), rgb(32, 124, 9), rgb(238, 216, 20));
-    background-size: 200% 100%;
-    animation: moveGradient 4s linear infinite;
-    grid-column: 1 / -1;
+//   &__line {
+//     width: 100%;
+//     height: 2px;
+//     background-image: linear-gradient(90deg, rgb(238, 216, 20), rgb(49, 154, 240), rgb(32, 124, 9), rgb(238, 216, 20));
+//     background-size: 200% 100%;
+//     animation: moveGradient 4s linear infinite;
+//     grid-column: 1 / -1;
 
-    @include onDesktop {
-      grid-column: 7 / 8;
-      justify-self: center;
-      width: 2px;
-      height: 260px;
-      background-size: 100% 200%;
-      animation: moveGradientDesktop 4s linear infinite;
-      background-image: linear-gradient(180deg, rgb(238, 216, 20), rgb(49, 154, 240), rgb(32, 124, 9), rgb(238, 216, 20));
-    }
-  }
+//     @include onDesktop {
+//       grid-column: 7 / 8;
+//       justify-self: center;
+//       width: 2px;
+//       height: 260px;
+//       background-size: 100% 200%;
+//       animation: moveGradientDesktop 4s linear infinite;
+//       background-image: linear-gradient(180deg, rgb(238, 216, 20), rgb(49, 154, 240), rgb(32, 124, 9), rgb(238, 216, 20));
+//     }
+//   }
 
-  @keyframes moveGradient {
-  0% {
-    background-position: 200% 0;
-  }
+//   @keyframes moveGradient {
+//   0% {
+//     background-position: 200% 0;
+//   }
 
-  100% {
-    background-position: -200% 0;
-  }
-}
+//   100% {
+//     background-position: -200% 0;
+//   }
+// }
 
-  @keyframes moveGradientDesktop {
-  0% {
-    background-position: 0 200%;
-  }
+//   @keyframes moveGradientDesktop {
+//   0% {
+//     background-position: 0 200%;
+//   }
 
-  100% {
-    background-position: 0 -200%;
-  }
-}
+//   100% {
+//     background-position: 0 -200%;
+//   }
+// }
 
 
   &__nav {
     padding-top: 40px;
     color: $black;
     grid-column: 1 / -1;
-    // box-shadow: 0 -2px 0 rgba($green, 50%);
+    box-shadow: 0px -2px 0 rgba($green, 50%);
 
     @include onTable {
       grid-column: 2 / -2;
     }
 
     @include onDesktop {
+      box-shadow: -2px 0px 0 rgba($green, 50%);
       padding-top: 0px;
-      grid-column: 8 / 11;
+      grid-column: 7 / 11;
       justify-self: stretch;
+      height: 260px;
+      padding-left: 65px;
+      margin-left: 35px;
     }
 
     & ul {
