--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,112 @@
+// main titles
 %h1 {
-  font-family: Roboto, sans-serif;
+  font-family: Montserrat,  sans-serif;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 45px;
+  text-align: center;
+  color: $c-black;
+
+  @include on-tablet {
+    font-size: 48px;
+  }
+}
+
+// subtitles
+%h2 {
+  font-family: Montserrat,  sans-serif;
+  font-size: 28px;
+  line-height: 28px;
+  text-align: left;
   font-weight: 400;
+  color: $c-black;
+
+  @include on-tablet {
+    font-size: 36px;
+    line-height: 36px;
+  }
+}
+
+// 'Виставка' 'Лекція'
+%label {
+  font-family: 'IBM Plex Sans',  sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 16px;
+  text-align: left;
+  text-transform: uppercase;
+  color: $c-gray;
+
+  @include on-tablet {
+    font-size: 14px;
+    line-height: 14px;
+  }
+}
+
+// date
+%h3 {
+  font-family: 'IBM Plex Sans',  sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: left;
+  color: $c-green;
+  font-weight: 700;
+
+  @include on-tablet {
+    font-size: 14px;
+    line-height: 21px;
+  }
+}
+
+// info
+%p {
+  font-family: 'IBM Plex Sans',  sans-serif;
+  font-weight: 300;
+  text-align: left;
+  font-size: 16px;
+  line-height: 24px;
+  color: $c-lightgray;
+}
+
+// date-menu
+%h5 {
+  font-family: 'IBM Plex Sans',  sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 21px;
+  text-align: left;
+}
+
+%span {
+  font-family: 'IBM Plex Sans',  sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  text-align: left;
+}
+
+%button {
+  cursor: pointer;
+  color: $c-black;
+  font-family: 'IBM Plex Sans',  sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 16px;
+  text-align: center;
+  background-color: transparent;
+  text-transform: uppercase;
+  margin: 0 auto;
+  padding: 0;
+}
+
+%input {
+  width: 230px;
+  height: 50px;
+
+  border: none;
+  font-family: Montserrat,  sans-serif;
+  font-size: 14px;
+  line-height: 14px;
+  text-align: left;
+  color: $c-gray;
 }
