--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,12 @@
-$c-gray: #eee;
+// colors
+$c-white: #eee;
+$c-black: #0F0E08;
+$c-green: #1A5A4C;
+$c-red: #F14A27;
+$c-gray: #687480;
+$c-lightgray: #4E4E4E;
+
+// screen-widths
+$width-tablet: 640px;
+$width-laptop: 1280px;
+$width-desktop: 1440px;
