--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,35 @@
 h1 {
   @extend %h1;
 }
+
+h2 {
+  @extend %h2;
+}
+
+h3 {
+  @extend %h3;
+}
+
+label {
+  @extend %label;
+}
+
+p {
+  @extend %p;
+}
+
+span {
+  @extend %span;
+}
+
+button {
+  @extend %button;
+}
+
+h5 {
+  @extend %h5;
+}
+
+input {
+  @extend %input;
+}
