--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,137 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin on-tablet {
+  @media (min-width: $width-tablet) {
+    @content;
+  }
+}
+
+@mixin on-laptop {
+  @media (min-width: $width-laptop) {
+    @content;
+  }
+}
+
+@mixin on-desktop {
+  @media (min-width: $width-desktop) {
+    @content;
+  }
+}
+
+@mixin container {
+  padding-inline: 20px;
+  @content;
+
+  @include on-tablet {
+    padding-inline: 35px;
+  }
+
+  @include on-desktop {
+    padding-inline: 55px;
+  }
+}
+
+@mixin template {
+  display: grid;
+  align-items: center;
+  column-gap: 30px;
+  @content;
+}
+
+.button {
+  &-green {
+    width: 270px;
+    height: 50px;
+
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid $c-green;
+
+    &__arrow {
+      position: relative;
+      display: flex;
+      align-items: center;
+      font-size: 20px;
+      left: 77px;
+
+      background-color: $c-green;
+      height: 50px;
+      width: 50px;
+
+      background-image: url('../images/rectangle/arrow.png');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: 24px 24px;
+    }
+
+    @include on-tablet {
+      margin: 0;
+      height: 70px;
+      margin-top: 38px;
+
+      &__arrow {
+        height: 70px;
+        width: 70px;
+      }
+    }
+  }
+
+  &-red__arrow {
+    border: none;
+    position: relative;
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+
+    background-color: $c-red;
+    margin: 0;
+    height: 52px;
+    width: 50px;
+
+    background-image: url('../images/rectangle/arrow.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 24px 24px;
+
+    @include on-tablet {
+      margin: 0;
+      height: 70px;
+      margin-top: 38px;
+
+      &__arrow {
+        height: 70px;
+        width: 70px;
+      }
+    }
+  }
+}
+
+.rectangle {
+  width: 10px;
+  height: 10px;
+  margin: 0 7.5px 2.5px;
+
+  @include on-tablet {
+    width: 15px;
+    height: 15px;
+  }
+}
+
+.arrow__up {
+  display: block;
+  position: relative;
+
+  left: 230px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 1px solid $c-green;
+
+  background-image: url('/images/rectangle/arrow-up.png');
+  background-repeat: no-repeat;
+  background-position: center;
+}
