--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,7 @@ html {
   scroll-behavior: smooth;
   position: relative;
   z-index: 4;
+  scrollbar-gutter: auto;
 
   &.active {
     overflow: hidden;
