--- a/src/styles/elements/_slider.scss
+++ b/src/styles/elements/_slider.scss
@@ -21,13 +21,19 @@
 //   width: 80% !important;
 // }
 
-
-.swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet,.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
-    margin: 0 var(--swiper-pagination-bullet-horizontal-gap,11px)!important;
+.gallery__swiper {
+  overflow: visible;
 }
 
-.swiper-pagination-bullet-active {
-    opacity: var(--swiper-pagination-bullet-opacity, 1);
-    background: $green !important;
+.swiper-slide img {
+  width: 100%;
 }
 
+#gallery .swiper-pagination-bullet {
+  margin-inline: 10px;
+}
+
+#gallery .swiper-pagination-bullet-active {
+  opacity: 1;
+  background: $green;
+}
