--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,6 @@
+@import '../../node_modules/swiper/swiper.scss';
+@import '../../node_modules/swiper/modules/pagination.scss';
+@import '../../node_modules/swiper/modules/autoplay.scss';
 @import './utils/index';
 @import './typography';
 @import './elements/index';
