--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,14 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import './blocks/page';
+@import './blocks/header';
+@import './blocks/menu';
+@import './blocks/exhibitions';
+@import './blocks/themes';
+@import './blocks/gallery';
+@import './blocks/subscription';
+@import './blocks/footer';
 
 body {
   background: $c-gray;
