--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,13 @@
-$c-gray: #eee;
+$main-green: #1a5a4c;
+$main-white: #fff;
+$main-black: #0f0e08;
+$main-grey: #c4c4c4;
+$grey-text: #687480;
+
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+
+$effectDuration: 0.3s;
+$scale: 1.2;
+
+$transition: all 0.4s;
