--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -17,7 +17,7 @@
       display: block;
       height: 1px;
       width: 100%;
-      background-color: #F14A27;
+      background-color: $red;
 
       transition: transform $effectDuration;
       transform: scale(0);
