--- a/src/styles/blocks/content.scss
+++ b/src/styles/blocks/content.scss
@@ -13,7 +13,7 @@
   &__wrapper {
     @include onDesktop {
       display: flex;
-      lex-direction: row;
+      flex-direction: row;
     }
   }
 
@@ -85,7 +85,7 @@
     justify-content: space-between;
     gap: 20px;
     padding-bottom: 70px;
-    border-bottom: 1px solid #1A5A4C80;
+    border-bottom: 1px solid #1a5a4c80;
     margin-bottom: 40px;
     position: relative;
 
@@ -96,7 +96,7 @@
 
     @include onDesktop {
       border-bottom: none;
-      border-right: 1px solid #1A5A4C80;
+      border-right: 1px solid #1a5a4c80;
       padding: 0 65px 0 0 ;
       margin: 0 65px 87px 0;
     }
