--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -11,7 +11,8 @@
   }
 
   &__wrapper {
-    scale: 0.8; opacity: 0;
+    opacity: 0;
+    scale: 0.8;
     transition: $transition;
     animation: fade-in ease-in-out forwards;
     animation-timeline: view();
@@ -41,7 +42,8 @@
   }
 
   &__img {
-    scale: 0.8; opacity: 0;
+    scale: 0.8;
+    opacity: 0;
     width: 100%;
     margin-bottom: 20px;
     transition: $transition;
@@ -82,7 +84,7 @@
       display: block;
       width: 10px;
       height: 10px;
-      background-color: #F14A27;
+      background-color: $red;
 
       @include onTablet {
         width: 15px;
@@ -119,6 +121,6 @@
     font-size: 16px;
     line-height: 24px;
     font-weight: 300;
-    color: #4E4E4E;
+    color: #4e4e4e;
   }
 }
