--- a/src/styles/blocks/follow.scss
+++ b/src/styles/blocks/follow.scss
@@ -11,10 +11,6 @@
   justify-content: center;
   align-items: center;
 
-  @include onTablet {
-
-  }
-
   @include onDesktop {
     height: 550px;
   }
@@ -51,12 +47,12 @@
     display: flex;
     width: 280px;
     margin: auto;
-    @include hover(box-shadow, 1px 4px 16px 0 rgba(211, 45, 16, 0.859));
+    @include hover(box-shadow, 1px 4px 16px 0 rgba(211, 45, 16, 0.86));
 
     @include onTablet {
       gap: 16px;
       width: 460px;
-      @include hover(box-shadow, 1px 1px 1px 0 rgb(0, 0, 0))
+      @include hover(box-shadow, 1px 1px 1px 0 rgb(0, 0, 0));
     }
 
     @include onDesktop {
@@ -80,7 +76,7 @@
       padding-left: 32px;
       width: 374px;
 
-      @include hover(box-shadow, 1px 4px 16px 0 rgba(231, 225, 210, 0.859));
+      @include hover(box-shadow, 1px 4px 16px 0 rgba(231, 225, 210, 0.86));
     }
 
     @include onDesktop {
@@ -91,7 +87,7 @@
   &__button {
     width: 50px;
     height: 50px;
-    background-color: #F14A27;
+    background-color: $red;
     display: flex;
     align-items: center;
     justify-content: center;
