--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -2,10 +2,11 @@
   margin-bottom: 100px;
   transition: opacity 1s;
 
-  scale: 0.8; opacity: 0;
-    animation: fade-in ease-in-out forwards;
-    animation-timeline: view();
-    animation-range: 250px 500px;
+  scale: 0.8;
+  opacity: 0;
+  animation: fade-in ease-in-out forwards;
+  animation-timeline: view();
+  animation-range: 250px 500px;
 
   @include onTablet {
     &:hover img {
