--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -96,14 +96,14 @@
     @include onTablet {
       grid-column: 1 / 4;
       grid-row: 1 / 2;
-      margin: 295px 0 0 0;
+      margin-top: 295px;
       width: 270px;
       height: 70px;
     }
 
     @include onDesktop {
-      grid-column: 3/ 7;
-      margin: 467px 0 0 0;
+      grid-column: 2 / 7;
+      margin-top: 467px;
     }
   }
 
@@ -121,7 +121,7 @@
       line-height: 14px;
       color: $grey-text;
       font-weight: 700;
-      font-family: 'IBM Plex Sans';
+      font-family: "IBM Plex Sans", sans-serif;
       text-transform: uppercase;
 
       &::before {
