--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -3,11 +3,11 @@
   padding-bottom: 24px;
   display: flex;
   gap: 28px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.50);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 
   @include onTablet {
     border-bottom: none;
-    border-right: 1px solid rgba(255, 255, 255, 0.50);
+    border-right: 1px solid rgba(255, 255, 255, 0.5);
     margin-right: 38px;
     padding-right: 38px;
   }
@@ -28,7 +28,7 @@
       bottom: -8px;
       height: 1px;
       width: 100%;
-      background: rgba(255, 255, 255, 0.50);
+      background: rgba(255, 255, 255, 0.5);
 
       transition: transform $effectDuration;
       transform: scale(0);
@@ -47,7 +47,7 @@
         bottom: -8px;
         height: 1px;
         width: 100%;
-        background: #F14A27;
+        background: $red;
 
         transition: transform $effectDuration;
         transform: scale(0);
