--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -3,11 +3,15 @@
 
   &__body {
     min-width: 320px;
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     overflow-x: hidden;
 
-    & h1, h2, h3, h4, input {
-      font-family: 'Montserrat', sans-serif;
+    & h1,
+    h2,
+    h3,
+    h4,
+    input {
+      font-family: "Montserrat", sans-serif;
     }
 
     &--with-menu {
