--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -3,6 +3,7 @@ $main-white: #fff;
 $main-black: #0f0e08;
 $main-grey: #c4c4c4;
 $grey-text: #687480;
+$red: #f14a27;
 
 $tablet-min-width: 768px;
 $desktop-min-width: 1280px;
@@ -10,4 +11,4 @@ $desktop-min-width: 1280px;
 $effectDuration: 0.3s;
 $scale: 1.2;
 
-$transition: all 0.4s;
+$transition: all 0.5s;
