--- a/src/styles/utils/animations.scss
+++ b/src/styles/utils/animations.scss
@@ -1,5 +1,8 @@
 @keyframes fade-in {
-  to { scale: 1; opacity: 1; }
+  to {
+    scale: 1;
+    opacity: 1;
+  }
 }
 
 @keyframes fade-in-left {
@@ -7,10 +10,9 @@
     opacity: 0;
     transform: translateX(-50px);
   }
-
   100% {
     opacity: 1;
-    transform: translateX(0px);
+    transform: translateX(0);
   }
 }
 
@@ -19,10 +21,9 @@
     opacity: 0;
     transform: translateX(50px);
   }
-
   100% {
     opacity: 1;
-    transform: translateX(0px);
+    transform: translateX(0);
   }
 }
 
@@ -31,9 +32,8 @@
     opacity: 0;
     transform: translateY(-50px);
   }
-
   100% {
     opacity: 1;
-    transform: translateY(0px);
+    transform: translateY(0);
   }
 }
