--- a/src/styles/blocks/quote.scss
+++ b/src/styles/blocks/quote.scss
@@ -18,7 +18,8 @@
     background-position: center;
     transition: $transition;
 
-    scale: 0.8; opacity: 0;
+    scale: 0.8;
+    opacity: 0;
     animation: fade-in ease-in-out forwards;
     animation-timeline: view();
     animation-range: 250px 500px;
@@ -28,7 +29,7 @@
     }
 
     @include onTablet {
-      background-image:  url(../images/main/Actual-third-big.png);
+      background-image: url(../images/main/Actual-third-big.png);
       height: 390px;
     }
 
@@ -45,17 +46,16 @@
     width: 280px;
     padding-block: 20px;
     background-color: $main-white;
-    border-bottom: 2px solid #1A5A4C40;
+    border-bottom: 2px solid #1a5a4c40;
 
-    scale: 0.8; opacity: 0;
+    scale: 0.8;
+    opacity: 0;
     animation: fade-in ease-in-out forwards;
     animation-timeline: view();
     animation-range: 250px 500px;
 
     @include onTablet {
       width: 570px;
-      padding-inline: 55px;
-      padding-bottom: 50px;
       padding: 45px 55px 50px;
       top: 80%;
     }
@@ -68,7 +68,7 @@
     margin-bottom: 20px;
 
     @include onTablet {
-      justify-content: space-between
+      justify-content: space-between;
     }
   }
 
