--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,34 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import 'helpers';
+@import 'blocks';
+
 
 body {
-  background: $c-gray;
+  margin: 0;
+  
+  width: 100%;
 }
+
+html{
+  box-sizing: border-box;
+  color: $dark-color;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 400;
+  scroll-behavior: smooth;
+  margin: 0;
+}
+
+
+
+
+
+
+
+
+
+
+
