--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,8 @@
-$c-gray: #eee;
+$tablet-max-width: 768px;
+$desktop-max-width: 1280px;
+$design-max-width: 1440px;
+$dark-color: #0F0E08;
+$green-color: #1A5A4C;
+$grey-color: #4E4E4E;
+$grey-light-color: #687480;
+$white-color: #fff;
