--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,3 +1,33 @@
+@mixin on-tablet{
+  @media (min-width: $tablet-max-width) {
+    @content;
+  }
+}
+
+@mixin on-desktop{
+  @media (min-width: $desktop-max-width) {
+    @content;
+  }
+}
+
+@mixin page-grid{
+  --columns: 2;
+
+  display: grid;
+  grid-template-columns: repeat(var(--columns), 1fr);
+  column-gap: 20px;
+
+  @include on-tablet{
+    --columns: 6;
+
+    column-gap: 30px;
+  }
+
+  @include on-desktop{
+    --columns: 12;
+  }
+}
+
 @mixin hover($_property, $_toValue) {
   transition: #{$_property} 0.3s;
   &:hover {
