add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
 @import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import 'utils/reset';
+@import 'blocks/font-family';
+@import 'blocks/menu';
+@import 'blocks/info';
+@import 'blocks/nav';
+@import 'blocks/header';
+@import 'blocks/icon';
+@import 'blocks/exposition';
+@import 'blocks/lecture';
+@import 'blocks/subscription';
+@import 'blocks/footer';
+@import 'blocks/navigation';
+@import 'blocks/slider';
