--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,23 @@
-$c-gray: #eee;
+$main-font-family: IBM Plex Sans, sans-serif;
+$uppercase-font-family: Montserrat, sans-serif;
+
+$color-text: #000;
+$color-text-second: #0f0e08;
+$color-text-third: #4e4e4e;
+$color-white: #fff;
+$color-background-second: #18181a;
+$color-background-third: #f14a27;
+$color-background-fourth: #e0e0e0;
+$color-border: #1a5a4c;
+$color-text-third: #687480;
+
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+$the-design-min-width: 1440px;
+
+$transition-image: transform .5s;
+$transforme-image: scale(1.05);
+
+
+
+
