--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
 $c-gray: #eee;
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+$effect-duration: 0.3s;
+$dark-green: #1a5a4c;
+$gray1: #4e4e4e;
+$black1: #0f0e08;
+$gray2: #687480;
+$black2: #000;
+$white: #fff;
+$orange: #f14a27;
