--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,5 @@
 /* stylelint-disable declaration-block-no-redundant-longhand-properties */
+/* stylelint-disable declaration-empty-line-before */
 @charset "UTF-8";
 
 .container {
@@ -202,31 +203,26 @@
 }
 
 .header {
-  height: 100vh;
+  height: 70vh;
   position: relative;
   background-image: url(../images/header.png);
-  background-position: top center;
+  background-position: top;
   background-repeat: no-repeat;
   background-size: contain;
   overflow-x: hidden;
 }
 
-@media screen and (min-width: 484px) {
-  .header {
-    background-position-x: 40%;
-  }
-}
-
 @media (min-width: 768px) {
   .header {
-    background-position: right;
+    background-size: 50% 70%;
+    background-position: top right;
   }
 }
 
 @media (min-width: 1280px) {
   .header {
+    height: 100vh;
     background-size: 60% auto;
-    background-position: 60% right;
   }
 
   .header::before {
@@ -714,7 +710,6 @@
 @media (min-width: 1280px) {
   .gallery__content {
     --colomns: 2;
-
     display: grid;
     row-gap: 30px;
     height: 100%;
@@ -726,7 +721,6 @@
 @media (min-width: 1280px) and (min-width: 768px) {
   .gallery__content {
     --colomns: 6;
-
     column-gap: 30px;
   }
 }
@@ -921,7 +915,6 @@
 @media (min-width: 768px) {
   .footer__content {
     --colomns: 2;
-
     display: grid;
     grid-template-columns: repeat(var(--colomns), 1fr);
     column-gap: 20px;
@@ -931,7 +924,6 @@
 @media (min-width: 768px) and (min-width: 768px) {
   .footer__content {
     --colomns: 6;
-
     column-gap: 30px;
   }
 }
