--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,25 +1,20 @@
 .header {
-  height: 100vh;
+  height: 70vh;
   position: relative;
   background-image: url(../images/header.png);
-  background-position: top center;
+  background-position: top;
   background-repeat: no-repeat;
   background-size: contain;
   overflow-x: hidden;
 
-  @media screen and (min-width: 484px) {
-    background-position-x: 40%;
-  }
-
   @include on-tablet {
-    background-position: right;
+    background-size: 50% 70%;
+    background-position:top right;
   }
-
 
   @include on-desktop {
+    height: 100vh;
     background-size: 60% auto;
-    background-position: 60% right;
-
     &::before {
       top: 80%;
       content: 'події';
