add task solution

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -3,6 +3,7 @@
   overflow-x: hidden;
   box-sizing: border-box;
   font-family: Montserrat, sans-serif;
+  min-width: 320px;
 
   &:has(.page__menu:target) {
     overflow: hidden;
