--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,5 +1,4 @@
 /* stylelint-disable declaration-block-no-redundant-longhand-properties */
-/* stylelint-disable declaration-empty-line-before */
 @charset "UTF-8";
 
 .container {
@@ -154,6 +153,7 @@
   overflow-x: hidden;
   box-sizing: border-box;
   font-family: Montserrat, sans-serif;
+  min-width: 320px;
 }
 
 .page:has(.page__menu:target) {
@@ -300,7 +300,6 @@
 }
 
 .header__button {
-  margin: 0 auto;
   margin-top: 20px;
 }
 
@@ -710,6 +709,7 @@
 @media (min-width: 1280px) {
   .gallery__content {
     --colomns: 2;
+
     display: grid;
     row-gap: 30px;
     height: 100%;
@@ -721,6 +721,7 @@
 @media (min-width: 1280px) and (min-width: 768px) {
   .gallery__content {
     --colomns: 6;
+
     column-gap: 30px;
   }
 }
@@ -915,6 +916,7 @@
 @media (min-width: 768px) {
   .footer__content {
     --colomns: 2;
+
     display: grid;
     grid-template-columns: repeat(var(--colomns), 1fr);
     column-gap: 20px;
@@ -924,6 +926,7 @@
 @media (min-width: 768px) and (min-width: 768px) {
   .footer__content {
     --colomns: 6;
+
     column-gap: 30px;
   }
 }
@@ -1069,10 +1072,6 @@
   font-weight: 600;
 }
 
-.footer__info {
-  flex: 0 0 50%;
-}
-
 .footer__info--wrapper {
   display: flex;
   gap: 20px;
@@ -1082,6 +1081,10 @@
   .footer__info--wrapper {
     gap: 30px;
   }
+}
+
+.footer__contacts {
+  padding-inline: 20px;
 }
 
 .footer__contacts--link {
