--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -129,8 +129,6 @@
   }
 
   &__info {
-    flex: 0 0 50%;
-
     &--wrapper {
       display: flex;
       gap: 20px;
@@ -143,6 +141,7 @@
   }
 
   &__contacts {
+    padding-inline: 20px;
     &--link {
       display: block;
       text-decoration: none;
