add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,11 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import './box/utils';
+@import './box/fonts';
+@import './box/typography';
+@import './box/html';
+@import './box/header';
+@import './box/baseline-menu';
+@import './box/page__menu';
+@import './box/tickets';
+@import './box/main';
+@import './box/footer-first';
+@import './box/footer-second';
