add task solution

--- a/src/styles/box/footer-second.scss
+++ b/src/styles/box/footer-second.scss
@@ -2,6 +2,7 @@
   @include page-grid;
 
   &__NAMU {
+    margin-bottom: 40px;
     grid-column: span 2;
     grid-row: span 1;
 
@@ -77,6 +78,7 @@
       line-height: 21px;
       text-align: left;
       color: #0f0e08;
+      margin-top: 0;
     }
 
     &--li {
@@ -115,6 +117,7 @@
       line-height: 21px;
       text-align: left;
       color: #0f0e08;
+      margin-top: 0;
     }
   }
 
