--- a/src/styles/box/header.scss
+++ b/src/styles/box/header.scss
@@ -1,4 +1,10 @@
 .page__header {
+  height: 480px;
+
+  @include on-tablet {
+    height: auto;
+  }
+
   transition: opacity $transition-speed;
 
   @include page-grid;
