--- a/src/styles/box/main.scss
+++ b/src/styles/box/main.scss
@@ -97,6 +97,11 @@
           flex-wrap: nowrap;
           gap: 20px;
           align-items: center;
+          justify-content: space-between;
+
+          @include on-tablet {
+            justify-content: left;
+          }
         }
 
         &-p {
@@ -119,6 +124,7 @@
           line-height: 24px;
           text-align: left;
           color: #1a5a4c;
+          font-weight: 700;
 
           @include on-tablet {
             font-size: 14px;
@@ -134,11 +140,18 @@
         line-height: 28px;
         text-align: left;
         color: #0f0e08;
+        margin: 0;
+        font-weight: normal;
 
         @include on-tablet {
           font-size: 36px;
           font-weight: 400;
           line-height: 36px;
+        }
+
+        &--img {
+          margin-bottom: 4px;
+          margin-left: 5px;
         }
       }
 
@@ -216,9 +229,11 @@
           text-align: left;
           color: #4e4e4e;
           margin: 0;
+          margin-left: 21px;
 
           @include on-tablet {
             font-weight: 300;
+            margin: 0;
           }
         }
 
@@ -230,10 +245,10 @@
           color: #1a5a4c;
           margin: 0;
           width: 174px;
+          font-weight: 700;
 
           @include on-tablet {
             font-size: 14px;
-            font-weight: 700;
             line-height: 21px;
             width: 220px;
           }
