--- a/src/styles/box/footer-first.scss
+++ b/src/styles/box/footer-first.scss
@@ -29,6 +29,7 @@
     margin: auto;
 
     &-h3 {
+      width: 100%;
       padding-top: 88px;
       margin: 0;
       font-family: Montserrat, sans-serif;
@@ -56,14 +57,29 @@
       text-align: center;
       color: #fff;
       margin-top: 20px;
+      max-width: 280px;
+      margin-bottom: 50px;
 
       @include on-tablet {
+        max-width: 460px;
+
         font-size: 18px;
         font-weight: 400;
         line-height: 18px;
         text-align: center;
         margin-top: 16px;
+        margin-bottom: 64px;
       }
+
+      @include on-desktop {
+        margin-bottom: 72px;
+      }
+    }
+
+    &--sub {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
     }
 
     &--form {
