--- a/src/styles/box/html.scss
+++ b/src/styles/box/html.scss
@@ -15,7 +15,7 @@ a {
   min-width: 320px;
   margin: 0;
   padding: 0;
-  background: $c-gray;
+  background: #fff;
   padding-left: 20px;
   padding-right: 20px;
 
