--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,3 +1,6 @@
+@import 'utils/icons';
+@import 'utils/functions';
 @import 'utils/vars';
+@import 'utils/null';
 @import 'utils/mixins';
-@import 'utils/extends';
+@import 'utils/common';
