--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,26 @@
-$c-gray: #eee;
+// Dimensions
+$padding-container-mobile-small: 20;
+$padding-container-mobile: 34;
+$padding-container: 55;
+$max-width-container: 1170;
+$container-width: $max-width-container + $padding-container;
+$mobile-small: em(479.98);
+$mobile: em(767.98);
+$tablet: em(991.98);
+$desktop: em($container-width);
+
+// Font
+$font-family: 'IBM Plex Sans', sans-serif;
+$second-family: 'Montserrat', sans-serif;
+$min-width: 320px;
+
+// colors
+$text-color: #4e4e4e;
+$text-light: #fff;
+$text-dark: #0f0e08;
+$main-bg: #1a5a4c;
+$light-bg: #fff;
+$orange-bg: #f14a27;
+
+// Other
+$duration: 0.3s;
