--- a/src/styles/sections/main.scss
+++ b/src/styles/sections/main.scss
@@ -11,6 +11,15 @@
     width: rem(55);
     z-index: 5;
 
+    @media (any-hover: hover) {
+      transition: transform $duration;
+      transform: scale(1);
+
+      &:hover {
+        transform: scale(1.2);
+      }
+    }
+
     @media (max-width: $mobile) {
       transform: translateX(-50%);
     }
